fix: update start time for adding tour